[gd_scene load_steps=14 format=3 uid="uid://jlfslyfbhid5"]

[ext_resource type="Script" path="res://logic/paddle.gd" id="1"]
[ext_resource type="Script" path="res://logic/game.gd" id="1_8r5gj"]
[ext_resource type="Texture2D" uid="uid://dvrb8efddt0aa" path="res://paddle.png" id="2"]
[ext_resource type="PackedScene" uid="uid://c72cw5i83ptj7" path="res://cenas/ball.tscn" id="4_5i3j6"]
[ext_resource type="Texture2D" uid="uid://drgpdyyomyqpl" path="res://separator.png" id="6"]
[ext_resource type="Script" path="res://logic/wall.gd" id="7"]
[ext_resource type="Script" path="res://logic/ceiling_floor.gd" id="8"]
[ext_resource type="FontFile" uid="uid://clsyu2mp7n850" path="res://assets/PublicPixel-z84yD.ttf" id="9_3gr4x"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(8, 32)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(20, 400)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(640, 20)

[sub_resource type="LabelSettings" id="LabelSettings_6crsv"]
font = ExtResource("9_3gr4x")

[sub_resource type="LabelSettings" id="LabelSettings_86yeb"]
font = ExtResource("9_3gr4x")

[node name="Pong" type="Node2D"]
script = ExtResource("1_8r5gj")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 400.0
color = Color(0.141176, 0.152941, 0.164706, 1)

[node name="Left" type="Area2D" parent="."]
modulate = Color(0, 1, 1, 1)
position = Vector2(67.6285, 192.594)
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="Left"]
texture = ExtResource("2")

[node name="Collision" type="CollisionShape2D" parent="Left"]
shape = SubResource("1")

[node name="Right" type="Area2D" parent="."]
modulate = Color(1, 0, 1, 1)
position = Vector2(563.815, 188.919)
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="Right"]
texture = ExtResource("2")

[node name="Collision" type="CollisionShape2D" parent="Right"]
shape = SubResource("1")

[node name="Ball" parent="." instance=ExtResource("4_5i3j6")]

[node name="Separator" type="Sprite2D" parent="."]
position = Vector2(320, 200)
texture = ExtResource("6")

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2(-10, 200)
script = ExtResource("7")

[node name="Collision" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("3")

[node name="RightWall" type="Area2D" parent="."]
position = Vector2(650, 200)
script = ExtResource("7")

[node name="Collision" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("3")

[node name="Ceiling" type="Area2D" parent="."]
position = Vector2(320, -10)
script = ExtResource("8")

[node name="Collision" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource("4")

[node name="Floor" type="Area2D" parent="."]
position = Vector2(320, 410)
script = ExtResource("8")
_bounce_direction = -1

[node name="Collision" type="CollisionShape2D" parent="Floor"]
shape = SubResource("4")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(320, 200)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RightScoreLabel" type="Label" parent="CanvasLayer/Control"]
layout_direction = 2
layout_mode = 1
offset_left = 580.0
offset_top = 20.0
offset_right = 620.0
offset_bottom = 43.0
text = "0
"
label_settings = SubResource("LabelSettings_6crsv")
horizontal_alignment = 2

[node name="LeftScoreLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 43.0
text = "0"
label_settings = SubResource("LabelSettings_86yeb")
vertical_alignment = 1

[connection signal="area_entered" from="Left" to="Left" method="_on_area_entered"]
[connection signal="area_entered" from="Right" to="Right" method="_on_area_entered"]
[connection signal="area_entered" from="LeftWall" to="LeftWall" method="_on_wall_area_entered"]
[connection signal="ball_out" from="LeftWall" to="." method="_on_left_wall_ball_out"]
[connection signal="area_entered" from="RightWall" to="RightWall" method="_on_wall_area_entered"]
[connection signal="ball_out" from="RightWall" to="." method="_on_right_wall_ball_out"]
[connection signal="area_entered" from="Ceiling" to="Ceiling" method="_on_area_entered"]
[connection signal="area_entered" from="Floor" to="Floor" method="_on_area_entered"]
